# MNN-APPLICATIONS

./: CMakeLists.txt  README.md  nanotrack_test.cpp  rknn_engine_test.cpp
src/: track_test.cpp
src/engine/: engine.h  rknn_engine.cpp
src/task/: nanotrack.cpp  nanotrack.h
src/types/: datatype.h  error.h
src/utils/: engine_helper.h
weights/: T_model_backbone.rknn  X_model_backbone.rknn  model_head.rknn
